--- a/tracker.html
+++ b/tracker.html
@@ -46,6 +46,7 @@ $("button").click(function(){
  
 function success(position)
 {
+	console.log(JSON.stringify(position));
 	var googleLatLng = new google.maps.LatLng(position.coords.latitude, 
 						position.coords.longitude);
 	var mapOtn={
